# OS

./: .gitignore
Лабораторная работа 2/: CMakeLists.txt  Lab2.sln  Lab2.vcxproj  average.cpp  average.h  data.h  main.cpp  min_max.cpp  min_max.h  Лабораторная работа 2.sln  Лабораторная работа 2.vcxproj  Лабораторная работа 2.vcxproj.filters
Лабораторная работа 2/Lab2_CPP14/: Lab2_CPP11.vcxproj  Lab2_CPP11.vcxproj.filters  average.cpp  average.h  data.cpp  main.cpp  min_max.h
Лабораторная работа 2/Lab2_CPP14/x64/Debug/: Lab2_CPP11.exe.recipe  Lab2_CPP11.ilk  Lab2_CPP14.exe.recipe  Lab2_CPP14.ilk  vc143.idb
Лабораторная работа 2/Lab2_CPP98/: Lab2_CPP98.vcxproj  Lab2_CPP98.vcxproj.filters  average.cpp  main.cpp  min_max.cpp  min_max.h
Лабораторная работа 2/Lab2_CPP98/x64/Debug/: Lab2_CPP98.exe.recipe  Lab2_CPP98.ilk  vc143.idb
Лабораторная работа 2/Lab2_Tests14/: Lab2_Tests11.vcxproj  Lab2_Tests11.vcxproj.filters  data.h  min_max.cpp  test14.cpp
Лабораторная работа 2/Lab2_Tests14/x64/Debug/: Lab2_Tests11.exe.recipe  Lab2_Tests11.ilk  Lab2_Tests11.vcxproj.FileListAbsolute.txt  Lab2_Tests14.exe.recipe  Lab2_Tests14.ilk  vc143.idb
Лабораторная работа 2/Lab2_Tests98/: Lab2_Tests98.vcxproj  Lab2_Tests98.vcxproj.filters  average.h  data.cpp  data.h  test98.cpp
Лабораторная работа 2/Lab2_Tests98/x64/Debug/: Lab2_Tests98.exe.recipe  Lab2_Tests98.ilk  Lab2_Tests98.vcxproj.FileListAbsolute.txt  vc143.idb
Лабораторная работа 2/TESTS/: average.cpp  average.h  data.h  main.cpp  min_max.cpp  min_max.h  tests.cpp
Лабораторная работа 3/: Lab3.sln  Lab3.vcxproj
(+316 files in other folders)
